WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286699
REGRESSION (
288289@main
): Rakuten date picker does not render correctly
https://bugs.webkit.org/show_bug.cgi?id=286699
Summary
REGRESSION (288289@main): Rakuten date picker does not render correctly
alan
Reported
2025-01-29 12:49:08 PST
<
rdar://143825684
>
Attachments
Patch
(3.55 KB, patch)
2025-01-29 12:51 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.56 KB, patch)
2025-01-29 13:08 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.56 KB, patch)
2025-01-30 05:39 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-01-29 12:51:53 PST
Created
attachment 474062
[details]
Patch
alan
Comment 2
2025-01-29 13:08:20 PST
Created
attachment 474063
[details]
[fast-cq]Patch
alan
Comment 3
2025-01-30 05:39:01 PST
Created
attachment 474071
[details]
[fast-cq]Patch
EWS
Comment 4
2025-01-30 07:47:09 PST
Committed
289557@main
(47019c239430): <
https://commits.webkit.org/289557@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474071
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug