REGRESSION (288289@main): Rakuten date picker does not render correctly https://bugs.webkit.org/show_bug.cgi?id=286699 <rdar://143825684>

Reviewed by Antti Koivisto.

In 288289@main, a flex layout specific early return incorrectly got removed. Let's put it back (with a test case).

* LayoutTests/fast/flexbox/flex-container-and-parent-with-align-attribute-expected.html: Added.
* LayoutTests/fast/flexbox/flex-container-and-parent-with-align-attribute.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/flexbox_stf-table-singleline-2.html:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalWidth const):

Canonical link: https://commits.webkit.org/289557@main